--- a/src/pages/CategoryEN.css
+++ b/src/pages/CategoryEN.css
@@ -17,23 +17,25 @@
   }
 .work-hero__content{
   display:flex;
+  flex-direction:column;
   align-items:center;
-  justify-content:space-between;
+  justify-content:center;
   gap:48px;
   width:100%;
   position:relative;
   z-index:2;
+  text-align:center;
 }
 .work-hero__text{
-  flex:1;
-  max-width:600px;
+  width:100%;
+  max-width:800px;
 }
 .work-hero__image{
-  flex:1;
   display:flex;
   justify-content:center;
   align-items:center;
   max-width:500px;
+  width:100%;
 }
 .work-hero__image img{
   width:100%;
@@ -49,9 +51,7 @@
 }
 @media (max-width:960px){
   .work-hero__content{
-    flex-direction:column;
     gap:32px;
-    text-align:center;
   }
   .work-hero__text{
     max-width:100%;
