--- a/src/pages/GraphicDesignAR.css
+++ b/src/pages/GraphicDesignAR.css
@@ -138,7 +138,9 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  display: block;
+  display: block !important;
+  visibility: visible !important;
+  opacity: 1 !important;
   position: absolute;
   top: 0;
   left: 0;
@@ -423,6 +425,16 @@
     flex: 0 0 100%;
     height: 250px;
     width: 100%;
+    min-height: 250px;
+  }
+  
+  .work-media img {
+    display: block !important;
+    visibility: visible !important;
+    opacity: 1 !important;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
   
   .work-body {
