--- a/src/pages/GraphicDesignEN.css
+++ b/src/pages/GraphicDesignEN.css
@@ -138,7 +138,9 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  display: block;
+  display: block !important;
+  visibility: visible !important;
+  opacity: 1 !important;
   position: absolute;
   top: 0;
   left: 0;
@@ -415,6 +417,16 @@
     flex: 0 0 100%;
     height: 250px;
     width: 100%;
+    min-height: 250px;
+  }
+  
+  .work-media img {
+    display: block !important;
+    visibility: visible !important;
+    opacity: 1 !important;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
   
   .work-body {
@@ -550,6 +562,13 @@
   
   .work-media {
     height: 200px;
+    min-height: 200px;
+  }
+  
+  .work-media img {
+    display: block !important;
+    visibility: visible !important;
+    opacity: 1 !important;
   }
   
   .work-body h4 {
@@ -626,6 +645,13 @@
   
   .work-media {
     height: 180px;
+    min-height: 180px;
+  }
+  
+  .work-media img {
+    display: block !important;
+    visibility: visible !important;
+    opacity: 1 !important;
   }
   
   .work-body h4 {
